# diskcsvsort

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
diskcsvsort/: __init__.py  __main__.py  columns.py  core.py  csvsort.py  enums.py  errors.py  infany.py  temp.py
diskcsvsort/cli/: __init__.py  columns.py  diskcsvsort_cli.py
tests/: conftest.py  test_diskcsvsort.py  test_infany.py
tests/cli/: test_cli.py  test_columns.py
