[tool.poetry]
name = "diskcsvsort"
version = "0.1.0"
description = "Sort huge csv files."
authors = ["volodymyrb <volodymyr.borysiuk0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
