[tool.poetry]
name = "diskcsvsort"
version = "0.1.1"
description = "Sort huge csv files."
authors = ["volodymyrb <volodymyr.borysiuk0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VolodymyrBor/diskcsvsort"
repository = "https://github.com/VolodymyrBor/diskcsvsort"

packages = [
    {include = "diskcsvsort"},
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
